--- a/logado.html
+++ b/logado.html
@@ -8,7 +8,7 @@
     <title>Dashboard</title>
 </head>
 <body>
-    
+    <section></section>
 </body>
 <script src="scripts/logado.js"></script>
 </html>
