Adicionando função aos inputs, editando o css e adicionando uma div para resposta de login.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
             <img src="image/FotoUsuario.jpg" alt="Foto do Usuário">
             <label for="email">Email<br><input type="text" id="email" placeholder="Digite seu email..."></label>
             <label for="senha">Senha<br><input type="password" id="senha" placeholder="Digite sua senha..."></label>
-            <a href="cadastro.html">Cadastre-se</a>
+            <p id="fraseCadastro">Já se cadastrou? <a href="cadastro.html">Cadastre-se</a></p>
             <div id="botoes">
                 <button id="botaoDesativado">Entrar</button>    
+            </div>
+            <div id="mensagemErro">
+                <p id="textoErro"></p>
             </div>
         </form>
     </section>
