Ajustes incio e catalogo

--- a/inicio.html
+++ b/inicio.html
@@ -136,9 +136,9 @@
     </header>
 
     <nav>
-        <a href="inicio.html">Início</a>
-        <a href="catalogo.html">Catálogo</a>
-        <a href="surpresa.html">Surpresa</a>
+        <a href="/inicio.html">Início</a>
+        <a href="/catalogo.html">Catálogo</a>
+        <a href="/surpresa.html">Surpresa</a>
     </nav>
 
     <main>
