--- a/catalogo.html
+++ b/catalogo.html
@@ -153,9 +153,9 @@
         <h1>APS <span>- Lógica de programação</span></h1>
     </header>
     <nav>
-        <a href="inicio.html">Início</a> 
-        <a href="catalogo.html">Catálogo</a> 
-        <a href="surpresa.html">Surpresa</a>
+        <a href="/inicio.html">Início</a>
+        <a href="/catalogo.html">Catálogo</a>
+        <a href="/surpresa.html">Surpresa</a>
     </nav>
 
     <main>
