Ajustes index e cadastro

--- a/cadastrado.html
+++ b/cadastrado.html
@@ -11,7 +11,7 @@
     <section>
         <form id="Cadastrado">
             <h2>Conta criada com sucesso!</h2>
-            <p id="fraseLogin">Clique <a href="login.html">aqui</a> para ser encaminhado para a página de login</p>
+            <p id="fraseLogin">Clique <a href="index.html">aqui</a> para ser encaminhado para a página de login</p>
         </form>
     </section>
     
