Fix image source path in surpresa.html

--- a/surpresa.html
+++ b/surpresa.html
@@ -242,15 +242,10 @@
         <div class="modal" id="modal">
             <div class="modal-content">
                 <button class="close-btn" id="closeBtn">&times;</button>
-                <img id="revealImage" src="/image/sua-foto.jpg" alt="Surpresa!">
+                <img id="revealImage" src="image/sua-foto.jpg" alt="Surpresa!">
             </div>
         </div>
     </main>
-
-    <footer>
-        <p>&copy; 2025 APS Lógica Matemática ©. Todos os direitos reservados.</p>
-    </footer>
-
 </body>
 <script>
     const presentBox = document.getElementById('presentBox');
