--- a/surpresa.html
+++ b/surpresa.html
@@ -13,13 +13,17 @@
             padding: 0;
             background-color: #1a1a1a;
             color: #ffffff;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
-        footer {
-            background-color: #222;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
+
+        main {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
 
         .container {
@@ -221,7 +225,7 @@
         }
     </style>
 </head>
-<body>   
+<body> 
     
     <main>
         <div class="container">
