--- a/inicio.html
+++ b/inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/image/Favicon2.0.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="image/Favicon2.0.jpg" type="image/x-icon">
     <title>Filmes - Início</title>
     
     <style>
