--- a/cadastrado.html
+++ b/cadastrado.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="image/Favicon2.0.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="image/FotoUsuario.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/cadastrado.css">
     <title>Cadastrado</title>
