--- a/surpresa.html
+++ b/surpresa.html
@@ -7,6 +7,10 @@
     <title>Conjunção Filmes</title>
     
     <style>
+        html {
+            font-size: 62.5%;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -16,6 +20,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            font-size: 1.6rem;
         }
 
         main {
@@ -35,20 +40,20 @@
 
         .container h1 {
             color: white;
-            font-size: 3em;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            font-size: 4.8rem;
+            margin-bottom: 2rem;
+            text-shadow: 0.2rem 0.2rem 0.4rem rgba(0,0,0,0.3);
         }
 
         .subtitle {
             color: rgba(255,255,255,0.9);
-            font-size: 1.3em;
-            margin-bottom: 40px;
+            font-size: 2.1rem;
+            margin-bottom: 4rem;
         }
 
         .present-box {
-            width: 200px;
-            height: 200px;
+            width: 20rem;
+            height: 20rem;
             margin: 0 auto;
             cursor: pointer;
             transition: transform 0.3s ease;
@@ -72,14 +77,14 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%);
-            border-radius: 20px;
+            border-radius: 2rem;
             position: relative;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            box-shadow: 0 1rem 3rem rgba(0,0,0,0.3);
         }
 
         .ribbon-v {
             position: absolute;
-            width: 40px;
+            width: 4rem;
             height: 100%;
             background: #ffd93d;
             left: 50%;
@@ -89,7 +94,7 @@
         .ribbon-h {
             position: absolute;
             width: 100%;
-            height: 40px;
+            height: 4rem;
             background: #ffd93d;
             top: 50%;
             transform: translateY(-50%);
@@ -97,19 +102,19 @@
 
         .bow {
             position: absolute;
-            top: -30px;
+            top: -3rem;
             left: 50%;
             transform: translateX(-50%);
-            width: 80px;
-            height: 60px;
+            width: 8rem;
+            height: 6rem;
         }
 
         .bow::before,
         .bow::after {
             content: '';
             position: absolute;
-            width: 40px;
-            height: 40px;
+            width: 4rem;
+            height: 4rem;
             background: #ffd93d;
             border-radius: 50% 50% 0 50%;
         }
@@ -126,8 +131,8 @@
 
         .click-text {
             color: white;
-            margin-top: 30px;
-            font-size: 1.2em;
+            margin-top: 3rem;
+            font-size: 1.9rem;
             animation: blink 1.5s infinite;
         }
 
@@ -188,16 +193,16 @@
         .modal-content img {
             max-width: 100%;
             max-height: 90vh;
-            border-radius: 10px;
-            box-shadow: 0 0 50px rgba(255,255,255,0.3);
+            border-radius: 1rem;
+            box-shadow: 0 0 5rem rgba(255,255,255,0.3);
         }
 
         .close-btn {
             position: absolute;
-            top: -40px;
+            top: -4rem;
             right: 0;
             color: white;
-            font-size: 40px;
+            font-size: 4rem;
             cursor: pointer;
             background: none;
             border: none;
@@ -210,8 +215,8 @@
 
         .confetti {
             position: fixed;
-            width: 10px;
-            height: 10px;
+            width: 1rem;
+            height: 1rem;
             background: #ffd93d;
             position: absolute;
             animation: confetti-fall 3s linear;
